[package]
name = "lockfree-ringbuffer"
version = "0.2.0"
edition = "2021"
authors = ["daibo"]
description = "A lock-free ring buffer implementation in Rust"
repository = "https://github.com/daibo83/lockfree-ringbuffer"
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

# Competing ring buffer implementations for benchmarking
rtrb = "0.3"                    # Real-time ring buffer (wait-free SPSC)
ringbuf = "0.4"                  # Another popular ring buffer
crossbeam-channel = "0.5"        # High-performance channel (for comparison)

[[bench]]
name = "ring_buffer_comparison"
harness = false